compiler-core/src/go/tests/snapshots/gleam_core__go__tests__type_alias__type_alias.snap
---
source: compiler-core/src/go/tests/type_alias.rs
expression: "\npub type Headers = List(#(String, String))\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Headers = List(#(String, String))


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0
